--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fullstack-root",
   "private": true,
   "scripts": {
+    "start": "npm run dev",
     "backend": "cd BackEnd && npm start",
     "frontend": "cd FrontEnd && npm start",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\""
